# trabalho-3-2-dna-profiler-atdayan

./: CMakeLists.txt  README.md
data/: data2.csv  sequence_xavier.txt  sequence_yara.txt
include/: Database.hpp  IOManager.hpp  Sequence.hpp
src/: DNAProfiler.cpp  Database.cpp  IOManager.cpp  Sequence.cpp
